--- a/admin/admin.html
+++ b/admin/admin.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="/js/script.js" defer></script>
+    <script src="/script.js" defer></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
