--- a/admin/add_product.html
+++ b/admin/add_product.html
@@ -17,7 +17,7 @@
     ></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="/script.js" defer></script>
+    <script src="/js/script.js" defer></script>
   </head>
   <body class="addproduct">
     <div class="fs-1 d-flex justify-content-center" id="title">
