--- a/pages/register.html
+++ b/pages/register.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="/script.js"></script>
+    <script src="/js/script.js"></script>
   </head>
   <body class="bgsignup">
     <div class="fs-1 d-flex justify-content-center">
