--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/Website/css/style.css" />
     <script src="/Website/js/script.js"></script>
   </head>
   <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Shopping</a>
+        <a class="navbar-brand" href="/Website/index.html">Shopping</a>
         <button
           class="navbar-toggler"
           type="button"
