--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
             <!-- <a class="nav-link btn btn-lg" aria-current="page" href="#">Home</a> -->
             <a
               class="but text-dark btn btn-outline-warning btn-lg"
-              href="/pages/cart.html"
+              href="/Website/pages/cart.html"
               >Cart</a
             >
             <a
               class="but1 nav-link btn btn-outline-success btn-lg"
-              href="/pages/order.html"
+              href="/Website/pages/order.html"
               >Order</a
             >
             <a
