--- a/admin/add_product.html
+++ b/admin/add_product.html
@@ -16,8 +16,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="/js/script.js" defer></script>
+    <link rel="stylesheet" href="/Website/css/style.css" />
+    <script src="/Website/js/script.js" defer></script>
   </head>
   <body class="addproduct">
     <div class="fs-1 d-flex justify-content-center" id="title">
