--- a/admin/orders.html
+++ b/admin/orders.html
@@ -15,13 +15,13 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="/js/script.js" defer></script>
+    <link rel="stylesheet" href="/Website/css/style.css" />
+    <script src="/Website/js/script.js" defer></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand text-primary" href="/index.html">Shopping</a>
+        <a class="navbar-brand text-primary" href="/Website/index.html">Shopping</a>
         <div
           class="collapse navbar-collapse d-flex justify-content-end"
           id="navbarNavAltMarkup"
@@ -30,14 +30,14 @@
             <a
               class="nav-link btn btn-outline-info btn-lg"
               aria-current="page"
-              href="admin.html"
+              href="/Website/admin/admin.html"
               >Home</a
             >
             <!-- <a class="but text-dark btn btn-outline-warning btn-lg " href="/cart.html">Cart</a> -->
             <!-- <a class="but1 nav-link btn btn-outline-success btn-lg" href="/order.html">Order</a> -->
             <a
               class="but1 nav-link btn btn-outline-secondary btn-lg"
-              href="/login.html"
+              href="/Website/login.html"
               >Logout</a
             >
           </div>
