--- a/pages/login.html
+++ b/pages/login.html
@@ -15,8 +15,8 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="/js/script.js"></script>
+    <link rel="stylesheet" href="/Website/css/style.css" />
+    <script src="/Website/js/script.js"></script>
   </head>
   <body class="bgsignin">
     <div class="fs-1 p-3 d-flex justify-content-center">
@@ -47,7 +47,7 @@
           />
           <p id="error" class="text-danger"></p>
         </div>
-        <p>not an user? <a href="/pages/register.html">Sign Up</a></p>
+        <p>not an user? <a href="/Website/pages/register.html">Sign Up</a></p>
         <div class="d-flex justify-content-center">
           <button
             class="mt-3 py-2 w-50 mb-3 rounded btn btn-primary"
