--- a/pages/login.html
+++ b/pages/login.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/Website/css/style.css" />
-    <script src="/Website/js/script.js"></script>
+    <script src="/Website/js/script.js" defer></script>
   </head>
   <body class="bgsignin">
     <div class="fs-1 p-3 d-flex justify-content-center">
