--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/Website/css/style.css" />
-    <script src="/Website/js/script.js"></script>
+    <script src="/Website/js/script.js" defer></script>
   </head>
   <body>
     <!-- navbar -->
