--- a/pages/cart.html
+++ b/pages/cart.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/Website/css/style.css" />
-    <script src="/Website/js/script.js"></script>
+    <script src="/Website/js/script.js"defer></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
