--- a/admin/admin.html
+++ b/admin/admin.html
@@ -37,7 +37,7 @@
           </a>
             <button
               class="but1 nav-link btn btn-outline-secondary btn-lg"
-              href="/Website/pages/login.html"
+              onclick="SignOutfunction()"
             >
               Logout
             </button>
