--- a/admin/orders.html
+++ b/admin/orders.html
@@ -37,7 +37,7 @@
             <!-- <a class="but1 nav-link btn btn-outline-success btn-lg" href="/order.html">Order</a> -->
             <a
               class="but1 nav-link btn btn-outline-secondary btn-lg"
-              href="/Website/login.html"
+              onclick="SignOutfunction()"
               >Logout</a
             >
           </div>
