--- a/pages/cart.html
+++ b/pages/cart.html
@@ -36,7 +36,7 @@
             >
             <a
               class="but1 nav-link btn btn-outline-secondary btn-lg"
-              href="/Website/pages/login.html"
+              onclick="SignOutfunction()"
               >Logout</a
             >
           </div>
