--- a/pages/order.html
+++ b/pages/order.html
@@ -27,7 +27,7 @@
                 <!-- <a class="nav-link btn btn-lg" aria-current="page" href="#">Home</a> -->
                 <a class="but text-dark btn btn-outline-warning btn-lg " href="/Website/pages/cart.html">Cart</a>
                 <!-- <a class="but1 nav-link btn btn-outline-success btn-lg" href="/order.html">Order</a> -->
-                <a class="but1 nav-link btn btn-outline-secondary btn-lg" href="/Website/pages/login.html">Logout</a>
+                <a class="but1 nav-link btn btn-outline-secondary btn-lg"  onclick="SignOutfunction()">Logout</a>
               </div>
             </div>
         </div>
