--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
      
     </div>
 
-    <footer></footer>
+    <footer><pre class="ts-5">
+       email: "admin@admin.com", password: "admin@123"
+       email: "siva@gmail.com", password: "siva"
+       email: "honeysiva@gmail.com", password: "siva@2000"
+    </pre></footer>
   </body>
 </html>
