--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
      
     </div>
 
-    <footer><pre class="ts-5">
+    <footer><pre class="text-center ts-5">
        email: "admin@admin.com", password: "admin@123"
        email: "siva@gmail.com", password: "siva"
        email: "honeysiva@gmail.com", password: "siva@2000"
+       <a class="btn btn-outline-success" href="/Website/pages/login.html">login</a>
     </pre></footer>
   </body>
 </html>
